--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -290,6 +290,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_practice_layout_test_VariousItemSizeScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_Minimap.cpp" />
     <ClCompile Include="..\Classes\ui_practice_MouseCursorScene.cpp" />
+    <ClCompile Include="..\Classes\ui_practice_RadioButtonScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_RelativeLayoutScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_SliderScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_ToggleButtonScene.cpp" />
@@ -455,6 +456,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_practice_layout_test_VariousItemSizeScene.h" />
     <ClInclude Include="..\Classes\ui_practice_Minimap.h" />
     <ClInclude Include="..\Classes\ui_practice_MouseCursorScene.h" />
+    <ClInclude Include="..\Classes\ui_practice_RadioButtonScene.h" />
     <ClInclude Include="..\Classes\ui_practice_RelativeLayoutScene.h" />
     <ClInclude Include="..\Classes\ui_practice_SliderScene.h" />
     <ClInclude Include="..\Classes\ui_practice_ToggleButtonScene.h" />
