--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -615,6 +615,9 @@
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_EnemyNode.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_rain_of_chaos_game_test_EnemyProcessorScene.cpp">
+      <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1111,6 +1114,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_EnemyNode.h">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_rain_of_chaos_game_test_EnemyProcessorScene.h">
+      <Filter>src\scene\step_05_rain_of_chaos\game_test</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
