--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -214,6 +214,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_EnemyProcessor_Tie.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_iSpawnProcessor.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_PlayerNode.cpp" />
+    <ClCompile Include="..\Classes\step_rain_of_chaos_game_PlayScene.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor_Circle_01_OutToIn.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor_CircularSector_01_1Direction.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor_CircularSector_01_2Direction.cpp" />
@@ -384,6 +385,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_iEnemyProcessor.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_iSpawnProcessor.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_PlayerNode.h" />
+    <ClInclude Include="..\Classes\step_rain_of_chaos_game_PlayScene.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor_Circle_01_OutToIn.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor_CircularSector_01_1Direction.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_SpawnProcessor_CircularSector_01_2Direction.h" />
