--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -151,6 +151,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\cpgui_ScrollViewGenerator.cpp" />
     <ClCompile Include="..\Classes\cpg_Setting.cpp" />
     <ClCompile Include="..\Classes\graph_practice_BasicScene.cpp" />
     <ClCompile Include="..\Classes\graph_practice_Collection01Scene.cpp" />
@@ -292,6 +293,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sprite_AnchorPointScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sprite_TextureTypeScene.cpp" />
+    <ClCompile Include="..\Classes\ui_practice_ScrollViewGeneratorScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_layout_test_ChangeSequenceScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutNScrollViewScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutHorizontalScene.cpp" />
@@ -316,6 +318,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\cpgui_ScrollViewGenerator.h" />
     <ClInclude Include="..\Classes\cpg_Clamp.h" />
     <ClInclude Include="..\Classes\cpg_Setting.h" />
     <ClInclude Include="..\Classes\graph_practice_BasicScene.h" />
@@ -468,6 +471,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_RootScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sprite_AnchorPointScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sprite_TextureTypeScene.h" />
+    <ClInclude Include="..\Classes\ui_practice_ScrollViewGeneratorScene.h" />
     <ClInclude Include="..\Classes\ui_practice_layout_test_ChangeSequenceScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutNScrollViewScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutHorizontalScene.h" />
