--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -154,6 +154,9 @@
     <Filter Include="src\scene\step_05_rain_of_chaos\draw_node">
       <UniqueIdentifier>{ecd4150e-3c0f-4804-b83d-5632a944bc07}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\ui">
+      <UniqueIdentifier>{cd981cce-c834-4dd7-8d81-40c41e7564da}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -644,6 +647,12 @@
     </ClCompile>
     <ClCompile Include="..\Classes\step_rain_of_chaos_draw_node_CircleScene.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\draw_node</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\cpgui_ScrollViewGenerator.cpp">
+      <Filter>src\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\ui_practice_ScrollViewGeneratorScene.cpp">
+      <Filter>src\scene\ui_practice</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1168,6 +1177,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_draw_node_CircleScene.h">
       <Filter>src\scene\step_05_rain_of_chaos\draw_node</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpgui_ScrollViewGenerator.h">
+      <Filter>src\ui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_practice_ScrollViewGeneratorScene.h">
+      <Filter>src\scene\ui_practice</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
