--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -307,6 +307,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_practice_ToggleButtonScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_UIAndCamera.cpp" />
     <ClCompile Include="..\Classes\ui_practice_RootScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_button_research_MouseRightClickScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_button_research_OnMouseOverScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_text_field_BMFontScene.cpp" />
@@ -485,6 +486,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_practice_ToggleButtonScene.h" />
     <ClInclude Include="..\Classes\ui_practice_UIAndCamera.h" />
     <ClInclude Include="..\Classes\ui_practice_RootScene.h" />
+    <ClInclude Include="..\Classes\ui_research_button_research_MouseRightClickScene.h" />
     <ClInclude Include="..\Classes\ui_research_button_research_OnMouseOverScene.h" />
     <ClInclude Include="..\Classes\ui_research_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_text_field_BMFontScene.h" />
