--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ cocos2dx_playground/cocos2d/*
 *.app
 cocos2dx_playground/proj.win32/.vs/*
 cocos2dx_playground/proj.win32/Debug.win32/*
+cocos2dx_playground/proj.win32/Release.win32/*
