--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -705,6 +705,9 @@
     <ClCompile Include="..\Classes\step_defender_parallax_node_BasicScene.cpp">
       <Filter>src\scene\step_06_defender\parallax_node</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_defender_parallax_node_BasicScene02.cpp">
+      <Filter>src\scene\step_06_defender\parallax_node</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1278,6 +1281,9 @@
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_defender_parallax_node_BasicScene.h">
+      <Filter>src\scene\step_06_defender\parallax_node</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_defender_parallax_node_BasicScene02.h">
       <Filter>src\scene\step_06_defender\parallax_node</Filter>
     </ClInclude>
   </ItemGroup>
